# studien-rag-assistent

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_PERFORMANCE.md  CONTRIBUTING.md  DOCKER-ANLEITUNG.md  DOCKER-CHROMADB-GUIDE.md  DOCKER-ISOLATION.md  FINAL-SUMMARY.md  IMPLEMENTATION.md  INSTALLATION.md  KNOWLEDGE_GRAPH_ANALYSIS.md  LICENSE  Makefile  PROJEKTDOKUMENTATION.md  QUICKSTART-V2.md  QUICKSTART.md  README-V2.md  README.md  SETUP-ANLEITUNG.md  SETUP.md  START.bat  START.md  START.sh  TEST_PERFORMANCE.sh  TEST_REPORT.md  WORKSHOP_SETUP.md  docker-rebuild.ps1  fix-and-test.ps1  fix-api-key.ps1  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  (+2 more)
.claude/: CLAUDE.md  settings.json  settings.local.json
backend/: requirements.txt
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: documents.py  flashcards.py  graph.py  progress.py  rag.py  voice.py
backend/app/services/: document_manager.py  document_pipeline.py  progress_tracker.py  shared_chroma.py
backend/app/services/flashcards/: flashcard_generator.py  flashcard_manager.py  spaced_repetition.py
backend/app/services/graph/: entity_extractor.py  graph_builder.py  path_finder.py
backend/app/services/rag/: advanced_document_processor.py  document_processor.py  rag_chain.py  vector_store.py
backend/app/services/voice/: realtime_client.py  session_manager.py
data/flashcards/: flashcards.db
docker/: Dockerfile  Dockerfile.backend  docker-compose-full.yml  docker-compose.yml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts
frontend/src/: App.tsx  react-cytoscapejs.d.ts
frontend/src/components/: DocumentProgress.tsx  Layout.tsx
frontend/src/components/Dashboard/: Dashboard.tsx
frontend/src/components/DataManagement/: DataManagementPage.tsx
frontend/src/components/Flashcards/: FlashcardsPage.tsx
frontend/src/components/Graph/: GraphPage.tsx
frontend/src/components/RAG/: RAGPage.tsx
frontend/src/hooks/: useDocumentProgress.ts  useTextToSpeech.ts  useVoiceInput.ts
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/tests/: api-debug.spec.ts  complete-workflow.spec.ts  comprehensive-test.spec.ts  dashboard.spec.ts  data-management.spec.ts  flashcards.spec.ts  graph.spec.ts  rag.spec.ts
src/: __init__.py  config.py  rag_chain.py  ui.py  vector_store.py
tests/: test_config.py
