[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studien-rag-assistent"
version = "0.1.0"
description = "Ein state-of-the-art RAG-System für Studierende"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["rag", "llm", "education", "study-assistant", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.3.10",
    "langchain-community>=0.3.10",
    "langchain-openai>=0.2.12",
    "langchain-chroma>=0.1.4",
    "chromadb>=0.5.23",
    "openai>=1.58.1",
    "pypdf>=5.1.0",
    "tiktoken>=0.8.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "streamlit>=1.41.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "mypy>=1.14.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
]

[project.scripts]
rag-assistant = "run:main"

[project.urls]
Homepage = "https://github.com/yourusername/studien-rag-assistent"
Documentation = "https://github.com/yourusername/studien-rag-assistent/blob/main/README.md"
Repository = "https://github.com/yourusername/studien-rag-assistent"
Issues = "https://github.com/yourusername/studien-rag-assistent/issues"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B601"]
